--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "blake2": "^4.0.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "typescript": "^4.2.3"
   }
 }
