--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
-    "path": "^0.12.7",
-    "serializr": "^2.0.5"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "typescript": "^4.2.3"
