--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "xmlbuilder": "^15.1.1"
   },
   "devDependencies": {
     "typescript": "^4.2.3"
