--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "blake2": "^4.0.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
+    "node-rsa": "^1.1.1",
     "path": "^0.12.7",
     "xmlbuilder": "^15.1.1"
   },
