--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
     "node-rsa": "^1.1.1",
