--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "blake2": "^4.0.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.18",
     "node-rsa": "^1.1.1",
     "path": "^0.12.7",
     "xml-crypto": "^2.1.1",
-    "xmlbuilder": "^15.1.1"
+    "xmlbuilder": "^15.1.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "typescript": "^4.2.3"
