--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "node-rsa": "^1.1.1",
     "path": "^0.12.7",
     "xml-crypto": "^2.1.1",
