--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "node-cron": "^3.0.0",
     "node-rsa": "^1.1.1",
     "path": "^0.12.7",
     "xml-crypto": "^2.1.1",
