--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "description": "Template for building an SaaS/admin application using React + Material-UI",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
@@ -16,15 +17,18 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.21.1",
     "emoji-mart": "^3.0.1",
+    "history": "^5.0.0",
     "js-cookie": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-cropper": "^2.1.7",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
+    "react-helmet": "^6.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "reactstrap": "^8.9.0",
     "recharts": "^2.0.9",
     "workbox-background-sync": "^6.1.5",
     "workbox-broadcast-update": "^6.1.5",
