--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "node-cron": "^3.0.0",
     "node-rsa": "^1.1.1",
     "path": "^0.12.7",
+    "pg": "^8.6.0",
+    "redis": "^3.1.2",
     "xml-crypto": "^2.1.1",
     "xmlbuilder": "^15.1.1",
     "xmlhttprequest": "^1.8.0"
