--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
     "node-rsa": "^1.1.1",
     "path": "^0.12.7",
     "pg": "^8.6.0",
-    "redis": "^3.1.2",
     "xml-crypto": "^2.1.1",
     "xmlbuilder": "^15.1.1",
     "xmlhttprequest": "^1.8.0"
