--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "author": "",
+  "author": "sudonims",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
