--- a/client/package.json
+++ b/client/package.json
@@ -5,20 +5,23 @@
   "homepage": "",
   "description": "Template for building an SaaS/admin application using React + Material-UI",
   "dependencies": {
+    "@craco/craco": "6.1.0",
     "@date-io/date-fns": "^1.3.13",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
     "@material-ui/system": "^4.11.3",
-    "@stripe/react-stripe-js": "^1.4.0",
-    "@stripe/stripe-js": "^1.13.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "aos": "^2.3.4",
     "classnames": "^2.3.1",
     "date-fns": "^2.21.1",
     "emoji-mart": "^3.0.1",
     "history": "^5.0.0",
     "js-cookie": "^2.2.0",
+    "notistack": "^1.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-cropper": "^2.1.7",
@@ -44,15 +47,19 @@
     "workbox-streams": "^6.1.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^13.1.5"
+    "@babel/core": "^7.11.6",
+    "autoprefixer": "^9.8.6",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-react": "^7.20.6",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
+    "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -68,14 +75,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dunky11/react-saas-template.git"
-  },
-  "author": "dunky11",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/dunky11/react-saas-template/issues"
   }
 }
