--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "blake2": "^4.0.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
